--- a/templates/canteen/login.html
+++ b/templates/canteen/login.html
@@ -29,7 +29,7 @@
                 <div class="Logo">
                     <img src="{% static 'images/o-logo.png' %}" alt="Vojan Express">
                 </div>
-                <h1>Welcome Back!</h1>
+                <h2>Welcome Back, Canteen Owner!</h2>
     
             </div>
 
