--- a/templates/student/login.html
+++ b/templates/student/login.html
@@ -20,7 +20,7 @@
         <div class="login_container">
             <div class="left-panel">
                 <img src="" alt="">
-                <a href="login.html" class="login-btn">LOGIN</a>
+                <a href="{% url 'login' %}" class="login-btn">LOGIN</a>
                 <a href="{% url 'register' %}" class="register-btn">REGISTER</a>
             </div>
         </div>
@@ -29,8 +29,8 @@
                 <div class="Logo">
                     <img src="{% static 'images/o-logo.png' %}" alt="Vojan Express">
                 </div>
-                <h1>Welcome Back!</h1>
-    
+                <h3>Welcome Future Leaders!</h3>
+            
             </div>
 
             <form method="POST">
